clusters/production/argocd/resources/kube-prometheus-stack/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=confirm,Delete=confirm
  name: monitoring
  labels:
    monitoring: enabled
